[project]
name = "try-strands-agents"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[ollama]>=1.41.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["strands.*", "strands_tools.*"]
ignore_missing_imports = true
